# ai-eval-forge

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ai_eval_forge/: __init__.py  cli.py  compare.py  evaluator.py  reporter.py
tests/: test_cli.py  test_compare.py  test_evaluator.py
